--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -19,9 +19,12 @@ http {
     server_tokens off;
 
     # задает формат вывода логов
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+    log_format main '$remote_addr - $remote_user [$time_local] "$request"  "$request_id" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log /dev/stdout main;
+
     sendfile        on;
     tcp_nodelay     on;
     tcp_nopush      on;
@@ -53,12 +56,16 @@ http {
     add_header X-Frame-Options SAMEORIGIN;
     #включает защиту от XSS.
     add_header X-XSS-Protection "1; mode=block";
+    add_header X-Request-ID $request_id;
+
 
     # используется для перенаправления запроса на другой хост, отключаем
     proxy_redirect off;
     proxy_set_header HOST $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    # Уникальный идентификатор входящего запроса
+    proxy_set_header X-Request-ID $request_id;
 
     # Подключение конфигураций серверов
     include conf.d/*.conf;
