--- a/services/auth-service/src/pyproject.toml
+++ b/services/auth-service/src/pyproject.toml
@@ -24,6 +24,11 @@ redis = "^5.2.1"
 psycopg2 = "^2.9.10"
 async-fastapi-jwt-auth = {extras = ["asymmetric"], version = "^0.6.6"}
 gunicorn = "^23.0.0"
+opentelemetry-api = "1.32.1"
+opentelemetry-sdk = "1.32.1"
+opentelemetry-instrumentation-fastapi = "0.53b1"
+opentelemetry-exporter-jaeger = "1.21.0"
+opentelemetry-exporter-otlp-proto-grpc = "1.32.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0"]
