--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,28 +3,27 @@ name = "monorepo-tools"
 version = "0.1.0"
 description = "Common development tools"
 requires-python = ">=3.12,<4.0"
+dependencies = [
+    "elasticsearch[async]>=8.13.2,<9.0.0",
+    "backoff==2.2.1"
+]
+
+[project.optional-dependencies]
+dev = [
+    "pre-commit>=4.1.0,<5.0.0",
+    "isort>=6.0.0,<7.0.0",
+    "black>=25.1.0,<26.0.0",
+    "flake8>=7.1.2,<8.0.0",
+    "debugpy>=1.8.13,<2.0.0",
+    "ipython>=9.1.0,<10.0.0"
+]
 
 [tool.poetry]
 package-mode = false
 
-[tool.poetry.group.dev.dependencies]
-pre-commit = "^4.1.0"
-isort = "^6.0.0"
-black = "^25.1.0"
-flake8 = "^7.1.2"
-debugpy = "^1.8.13"
-ipython = "^9.1.0"
-
-
 [tool.poetry.dependencies]
-elasticsearch = {extras = ["async"], version = "^8.13.2"}
-backoff = "2.2.1"
 auth-utils = {path = "libs/auth_utils"}
-opentelemetry-api = "1.32.1"
-opentelemetry-sdk = "1.32.1"
-opentelemetry-instrumentation-fastapi = "0.53b1"
-opentelemetry-exporter-jaeger = "1.21.0"
-opentelemetry-exporter-otlp-proto-grpc = "1.32.1"
+
 [build-system]
 requires = ["poetry-core>=2.0.0"]
 build-backend = "poetry.core.masonry.api"
