--- a/services/async-api/src/pyproject.toml
+++ b/services/async-api/src/pyproject.toml
@@ -3,19 +3,17 @@ name = "async-api"
 version = "0.1.0"
 description = "async api service"
 requires-python = ">=3.12,<4.0"
+dependencies = [
+    "fastapi[all]>=0.115.11,<1.0.0",
+    "elasticsearch[async]>=8.13.2,<9.0.0",
+    "redis>=5.0.4,<6.0.0",
+    "pydantic-settings>=2.8.1,<3.0.0",
+    "gunicorn>=23.0.0,<24.0.0",
+    "async-fastapi-jwt-auth[asymmetric]>=0.6.6,<1.0.0"
+]
 
 [tool.poetry]
 package-mode = false
-
-[tool.poetry.dependencies]
-python = "^3.12"
-fastapi = {extras = ["all"], version = "^0.115.11"}
-elasticsearch = {extras = ["async"], version = "^8.13.2"}
-redis = "^5.0.4"
-pydantic-settings = "^2.8.1"
-gunicorn = "^23.0.0"
-async-fastapi-jwt-auth = {extras = ["asymmetric"], version = "^0.6.6"}
-
 
 [build-system]
 requires = ["poetry-core>=2.0.0"]
