Реализую docker для admin-panel и доступ к admin-panel по nginx.

--- a/infra/nginx/configs/site.conf
+++ b/infra/nginx/configs/site.conf
@@ -18,6 +18,18 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
+    location /admin/ {
+        proxy_pass http://admin-panel:8000/admin/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /static/ {
+        alias /var/www/static/;
+        try_files $uri =404;
+    }
+
     # Возвращать 404 для всех остальных запросов
     location / {
         return 404;
