--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,6 +125,20 @@ services:
         condition: service_healthy
     restart: always
 
+  admin-panel:
+    build:
+      context: .
+      dockerfile: ./services/admin-panel/src/Dockerfile
+    env_file:
+      - ./.env
+    volumes:
+      - static_django:/var/www/static
+    depends_on:
+      redis:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+
   postgres:
     image: postgres:17-alpine
     container_name: postgres-container
@@ -166,6 +180,7 @@ services:
     volumes:
       - ./infra/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./infra/nginx/configs:/etc/nginx/conf.d:ro
+      - static_django:/var/www
     depends_on:
       - async-api
       - auth-api
@@ -177,3 +192,4 @@ volumes:
   redis_data:
   pg_data_volume:
   elasticsearch_data:
+  static_django:
