Перемещаю код трейсера в библиотеку

--- a/libs/tracer_utils/pyproject.toml
+++ b/libs/tracer_utils/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
 ]
 
 [tool.poetry]
-packages = [{ include = "tracer" }]
+packages = [{ include = "tracer_utils" }]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
