--- a/services/auth-service/src/Dockerfile.debug
+++ b/services/auth-service/src/Dockerfile.debug
@@ -15,6 +15,13 @@ ENV PATH="/root/.local/bin:${PATH}"
 
 COPY pyproject.toml poetry.lock .env ./
 
+# Копируем libs и собираем на месте
+COPY libs/auth_utils /opt/app/libs/auth_utils
+RUN cd /opt/app/libs/auth_utils && poetry build && cd /opt/app && poetry add libs/auth_utils
+
+COPY libs/tracer_utils /opt/app/libs/tracer_utils
+RUN cd /opt/app/libs/tracer_utils && poetry build && cd /opt/app && poetry add libs/tracer_utils
+
 # RUN poetry install --only main
 RUN poetry install --with dev
 
