--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
-
 #DOCKER
 ##REDIS
 REDIS_HOST=redis
@@ -21,16 +20,24 @@ KIBANA_PORT=5601
 ##NGINX
 NGINX_PORT=80
 
-###ELASTIC
+##ELASTIC
 ELASTIC_HOST=elasticsearch
 ELASTIC_PORT=9200
+
+##Jaeger
+JAEGER_HOST=jaeger
+JAEGER_PORT=4317
+TRACE_PERCENT=1.0 #Доля запросов попадающий в трейсинг 1.0 - 100%
+
+##APP_TRACING
+TRACING=True ##Включение/Выключение трассировки
 
 #------------------------------------------------------------------------------
 # ПЕРЕМЕННЫЕ ДЛЯ ТЕСТОВ
 
 # REDIS (RedisConf)
-# TEST_REDIS__HOST=redis-container
-TEST_REDIS__HOST=localhost
+TEST_REDIS__HOST=redis-container
+# TEST_REDIS__HOST=localhost
 TEST_REDIS__PORT=6379
 TEST_REDIS__DB=0
 TEST_REDIS__PASSWORD=Parol123
@@ -38,24 +45,24 @@ TEST_REDIS__USER=redis_user
 TEST_REDIS_USER__PASSWORD=Parol123
 
 # ELASTIC (ESConf)
-# TEST_ELASTIC__HOST=elasticsearch-container
-TEST_ELASTIC__HOST=localhost
+TEST_ELASTIC__HOST=elasticsearch-container
+# TEST_ELASTIC__HOST=localhost
 TEST_ELASTIC__PORT=9200
 TEST_ELASTIC__INDEX_FILMS=movies
 TEST_ELASTIC__INDEX_GENRES=genres
 TEST_ELASTIC__INDEX_PERSONS=persons
 
 # POSTGRES
-TEST_POSTGRES__USER=postgres
-TEST_POSTGRES__PASSWORD=postgres
-TEST_POSTGRES__DB=pg_db
 TEST_POSTGRES__HOST=postgres
 # TEST_POSTGRES__HOST=localhost
 TEST_POSTGRES__PORT=5432
+TEST_POSTGRES__USER=postgres
+TEST_POSTGRES__PASSWORD=postgres
+TEST_POSTGRES__DB=pg_db
 
 # API (APIConf)
-# TEST_ASYNCAPI__HOST=async-api-container
-TEST_ASYNCAPI__HOST=localhost
+TEST_ASYNCAPI__HOST=async-api-container
+# TEST_ASYNCAPI__HOST=localhost
 TEST_ASYNCAPI__PORT=8000
 
 TEST_AUTHAPI__HOST=auth-api-container
