--- a/docker-compose-tests.yml
+++ b/docker-compose-tests.yml
@@ -145,6 +145,24 @@ services:
       redis:
         condition: service_healthy
 
+  jaeger:
+    image: jaegertracing/all-in-one:1.68.0
+    profiles: ["async-api-test", "auth-api-test"]
+    container_name: jaeger-container
+    environment:
+      - COLLECTOR_ZIPKIN_HOST_PORT=:9411
+      - COLLECTOR_OTLP_ENABLED=true
+    ports:
+      - "6831:6831/udp"   # принимает трейсы в формате jaeger.thrift по compact thrift protocol
+      - "6832:6832/udp"   # принимает трейсы в формате jaeger.thrift по binary thrift protocol
+      - "5778:5778"       # порт для конфигурации сэмплирования
+      - "16686:16686"     # порт веб-интерфейса
+      - "4317:4317"       # порт OTLP gRPC
+      - "4318:4318"       # порт OTLP HTTP
+      - "14250:14250"     # принимает трейсы в модели данных jaeger.proto
+      - "14268:14268"     # принимает трейсы напрямую от клиентов в формате jaeger.thrift
+      - "9411:9411"       # порт совместимости с Zipkin
+    restart: always
 
 volumes:
   test_redis_data:
