--- a/libs/tracer_utils/pyproject.toml
+++ b/libs/tracer_utils/pyproject.toml
@@ -10,6 +10,10 @@ dependencies = [
     "opentelemetry-instrumentation-fastapi==0.53b1",
     "opentelemetry-exporter-jaeger==1.21.0",
     "opentelemetry-exporter-otlp-proto-grpc==1.32.1",
+    "dotenv (>=0.9.9,<0.10.0)",
+    "pydantic (>=2.11.4,<3.0.0)",
+    "pydantic-settings (>=2.9.1,<3.0.0)",
+    "fastapi (>=0.115.12,<0.116.0)",
 ]
 
 [tool.poetry]
