--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -179,7 +179,7 @@ services:
         condition: service_healthy
 
   nginx:
-    image: nginx:1.27.5
+    image: nginx:1.27.5-alpine
     env_file: .env
     volumes:
       - ./infra/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
