Реализую кастомный createsuperuser.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -138,6 +138,9 @@ services:
         condition: service_healthy
       postgres:
         condition: service_healthy
+      auth-api:
+        condition: service_healthy
+
 
   postgres:
     image: postgres:17-alpine
