--- a/services/auth-service/src/pyproject.toml
+++ b/services/auth-service/src/pyproject.toml
@@ -24,6 +24,7 @@ redis = "^5.2.1"
 psycopg2 = "^2.9.10"
 async-fastapi-jwt-auth = {extras = ["asymmetric"], version = "^0.6.6"}
 gunicorn = "^23.0.0"
+authlib = "1.5.2"
 
 [build-system]
 requires = ["poetry-core>=2.0.0"]
