--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -86,14 +86,14 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
-    ports:
-      - "${REDIS_PORT}:${REDIS_PORT}"
+    # ports:
+    #   - "${REDIS_PORT}:${REDIS_PORT}"
     restart: always
 
   auth-api:
     build:
       context: .
-      dockerfile: ./services/auth-service/src/Dockerfile
+      dockerfile: ./services/auth-service/src/Dockerfile.debug
     env_file:
       - ./.env
     cpus: "1"
@@ -115,6 +115,7 @@ services:
       start_period: 30s
     ports:
       - "8000:8000"
+      - "5679:5679"
 
   async-api:
     build:
@@ -133,6 +134,25 @@ services:
     ports:
       - "8001:8001"
 
+  admin-panel:
+    build:
+      context: .
+      dockerfile: ./services/admin-panel/src/Dockerfile.debug
+    env_file:
+      - ./.env
+    # volumes:
+    #   - static_django:/var/www/static
+    depends_on:
+      redis:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+      auth-api:
+        condition: service_healthy
+    ports:
+      - "8002:8002"
+      - "5678:5678"
+
   postgres:
     image: postgres:17-alpine
     container_name: postgres-container
@@ -144,7 +164,8 @@ services:
       - pg_data_volume:/var/lib/postgresql/data
       - ./backup/postgres_dump-auth/dumps:/dumps
     ports:
-      - "${POSTGRES_PORT}:${POSTGRES_PORT}"
+      - "5432:5432"
+      # - "${POSTGRES_PORT}:${POSTGRES_PORT}"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
       interval: 10s
@@ -168,18 +189,18 @@ services:
       auth-api:
         condition: service_healthy
 
-  nginx:
-    image: nginx:1.27-alpine
-    env_file: .env
-    volumes:
-      - ./infra/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./infra/nginx/configs:/etc/nginx/conf.d:ro
-    depends_on:
-      - async-api
-      - auth-api
-    ports:
-      - "${NGINX_PORT}:${NGINX_PORT}"
-    restart: always
+  # nginx:
+  #   image: nginx:1.27-alpine
+  #   env_file: .env
+  #   volumes:
+  #     - ./infra/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+  #     - ./infra/nginx/configs:/etc/nginx/conf.d:ro
+  #   depends_on:
+  #     - async-api
+  #     - auth-api
+  #   ports:
+  #     - "${NGINX_PORT}:${NGINX_PORT}"
+  #   restart: always
 
 volumes:
   redis_data:
