--- a/services/admin-panel/src/pyproject.toml
+++ b/services/admin-panel/src/pyproject.toml
@@ -19,7 +19,7 @@ passlib = "^1.7.4"
 argon2-cffi = "^23.1.0"
 gunicorn = "^23.0.0"
 psycopg2 = "^2.9.10"
-debugpy = "^1.8.13"
+django-split-settings = "^1.3.2"
 
 [build-system]
 requires = ["poetry-core>=2.0.0"]
