--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,27 +1,34 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v5.0.0
+    rev: v4.5.0
     hooks:
       - id: check-yaml
       - id: end-of-file-fixer
       - id: trailing-whitespace
 
-  - repo: https://github.com/PyCQA/isort
+  - repo: https://github.com/pycqa/isort
     rev: 5.13.2
     hooks:
       - id: isort
-        args: [--profile=black, --line-length=100]
+        name: isort (python)
 
   - repo: https://github.com/psf/black
-    rev: 25.1.0
+    rev: 24.2.0
     hooks:
       - id: black
-        args: [--safe, --quiet, --line-length=100]
         language_version: python3.12
 
   - repo: https://github.com/pycqa/flake8
-    rev: 7.1.0
+    rev: 7.0.0
     hooks:
       - id: flake8
-        args: [--max-line-length=100]
-        language_version: python3.12
+        exclude: >
+            (?x)^(
+                .*/migrations/.*|
+                .*/migration/.*|
+                services/auth-service/src/migration/.*|
+                services/auth-service/src/migrations/.*
+            )$
+        additional_dependencies: [
+            'flake8-pyproject==1.2.3',
+        ]
