--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -86,8 +86,8 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
-    # ports:
-    #   - "${REDIS_PORT}:${REDIS_PORT}"
+    ports:
+      - "${REDIS_PORT}:${REDIS_PORT}"
     restart: always
 
   auth-api:
@@ -140,8 +140,6 @@ services:
       dockerfile: ./services/admin-panel/src/Dockerfile.debug
     env_file:
       - ./.env
-    # volumes:
-    #   - static_django:/var/www/static
     depends_on:
       redis:
         condition: service_healthy
@@ -164,8 +162,7 @@ services:
       - pg_data_volume:/var/lib/postgresql/data
       - ./backup/postgres_dump-auth/dumps:/dumps
     ports:
-      - "5432:5432"
-      # - "${POSTGRES_PORT}:${POSTGRES_PORT}"
+      - "${POSTGRES_PORT}:${POSTGRES_PORT}"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
       interval: 10s
@@ -189,18 +186,6 @@ services:
       auth-api:
         condition: service_healthy
 
-  # nginx:
-  #   image: nginx:1.27-alpine
-  #   env_file: .env
-  #   volumes:
-  #     - ./infra/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-  #     - ./infra/nginx/configs:/etc/nginx/conf.d:ro
-  #   depends_on:
-  #     - async-api
-  #     - auth-api
-  #   ports:
-  #     - "${NGINX_PORT}:${NGINX_PORT}"
-  #   restart: always
 
 volumes:
   redis_data:
