--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+#LOGGER
+LOG_LOG_LEVEL=DEBUG
 
 #DOCKER
 ##REDIS
@@ -21,7 +23,7 @@ KIBANA_PORT=5601
 ##NGINX
 NGINX_PORT=80
 
-###ELASTIC
+##ELASTIC
 ELASTIC_HOST=elasticsearch
 ELASTIC_PORT=9200
 
@@ -29,8 +31,8 @@ ELASTIC_PORT=9200
 # ПЕРЕМЕННЫЕ ДЛЯ ТЕСТОВ
 
 # REDIS (RedisConf)
-# TEST_REDIS__HOST=redis-container
-TEST_REDIS__HOST=localhost
+TEST_REDIS__HOST=redis-container
+# TEST_REDIS__HOST=localhost
 TEST_REDIS__PORT=6379
 TEST_REDIS__DB=0
 TEST_REDIS__PASSWORD=Parol123
@@ -38,24 +40,24 @@ TEST_REDIS__USER=redis_user
 TEST_REDIS_USER__PASSWORD=Parol123
 
 # ELASTIC (ESConf)
-# TEST_ELASTIC__HOST=elasticsearch-container
-TEST_ELASTIC__HOST=localhost
+TEST_ELASTIC__HOST=elasticsearch-container
+# TEST_ELASTIC__HOST=localhost
 TEST_ELASTIC__PORT=9200
 TEST_ELASTIC__INDEX_FILMS=movies
 TEST_ELASTIC__INDEX_GENRES=genres
 TEST_ELASTIC__INDEX_PERSONS=persons
 
 # POSTGRES
-TEST_POSTGRES__USER=postgres
-TEST_POSTGRES__PASSWORD=postgres
-TEST_POSTGRES__DB=pg_db
 TEST_POSTGRES__HOST=postgres
 # TEST_POSTGRES__HOST=localhost
 TEST_POSTGRES__PORT=5432
+TEST_POSTGRES__USER=postgres
+TEST_POSTGRES__PASSWORD=postgres
+TEST_POSTGRES__DB=pg_db
 
 # API (APIConf)
-# TEST_ASYNCAPI__HOST=async-api-container
-TEST_ASYNCAPI__HOST=localhost
+TEST_ASYNCAPI__HOST=async-api-container
+# TEST_ASYNCAPI__HOST=localhost
 TEST_ASYNCAPI__PORT=8000
 
 TEST_AUTHAPI__HOST=auth-api-container
