--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,30 +5,52 @@ repos:
       - id: check-yaml
       - id: end-of-file-fixer
       - id: trailing-whitespace
+      - id: check-added-large-files
+      - id: check-json
+        exclude: ^backup/elastic_dump/dump/.*\.json$
+      - id: debug-statements
 
   - repo: https://github.com/pycqa/isort
     rev: 5.13.2
     hooks:
       - id: isort
         name: isort (python)
+        args: ["--profile", "black", "--line-length=100"]
 
   - repo: https://github.com/psf/black
     rev: 24.2.0
     hooks:
       - id: black
         language_version: python3.12
+        args: ["--line-length=100"]
+        exclude: >
+            (?x)^(
+                \.git/.*|
+                \.venv/.*|
+                build/.*|
+                dist/.*|
+                migrations/.*|
+                migration/.*|
+                backup/.*
+            )$
 
   - repo: https://github.com/pycqa/flake8
     rev: 7.0.0
     hooks:
       - id: flake8
+        args: [
+          "--max-line-length=100",
+          "--extend-ignore=E203,W503",
+          "--per-file-ignores=__init__.py:F401"
+        ]
         exclude: >
             (?x)^(
+                \.git/.*|
+                \.venv/.*|
+                build/.*|
+                dist/.*|
                 .*/migrations/.*|
                 .*/migration/.*|
                 services/auth-service/src/migration/.*|
-                services/auth-service/src/migrations/.*
+                backup/.*
             )$
-        additional_dependencies: [
-            'flake8-pyproject==1.2.3',
-        ]
