--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -92,8 +92,8 @@ services:
       dockerfile: ./services/auth-service/src/Dockerfile
     env_file:
       - ./.env
-    # cpus: "1"
-    # mem_limit: 256M
+    cpus: "1"
+    mem_limit: 256M
     depends_on:
       redis:
         condition: service_healthy
