Реализовал авторизацию через сервис Yandex

--- a/services/auth-service/src/pyproject.toml
+++ b/services/auth-service/src/pyproject.toml
@@ -25,6 +25,7 @@ psycopg2 = "^2.9.10"
 async-fastapi-jwt-auth = {extras = ["asymmetric"], version = "^0.6.6"}
 gunicorn = "^23.0.0"
 authlib = "1.5.2"
+aiohttp = "3.11.18"
 
 [build-system]
 requires = ["poetry-core>=2.0.0"]
