--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
+    rev: v5.0.0
     hooks:
       - id: check-yaml
       - id: end-of-file-fixer
@@ -10,7 +10,7 @@ repos:
         exclude: ^backup/elastic_dump/dump/.*\.json$
       - id: debug-statements
 
-  - repo: https://github.com/pycqa/isort
+  - repo: https://github.com/PyCQA/isort
     rev: 5.13.2
     hooks:
       - id: isort
@@ -18,7 +18,7 @@ repos:
         args: ["--profile", "black", "--line-length=100"]
 
   - repo: https://github.com/psf/black
-    rev: 24.2.0
+    rev: 25.1.0
     hooks:
       - id: black
         language_version: python3.12
@@ -35,9 +35,10 @@ repos:
             )$
 
   - repo: https://github.com/pycqa/flake8
-    rev: 7.0.0
+    rev: 7.1.0
     hooks:
       - id: flake8
+        language_version: python3.12
         args: [
           "--max-line-length=100",
           "--extend-ignore=E203,W503",
