--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,10 @@ NGINX_PORT=80
 ELASTIC_HOST=elasticsearch
 ELASTIC_PORT=9200
 
+AUTH_SECRET_KEY=eCWelzcn3Evoetllt6qPMHPZFT8T5vgJ
+YANDEX_CLIENT_SECRET=<секретный код клиента Яндекс>
+YANDEX_CLIENT_ID=<код клиента Яндекс>
+
 #------------------------------------------------------------------------------
 # ПЕРЕМЕННЫЕ ДЛЯ ТЕСТОВ
 
