--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -22,24 +22,6 @@ services:
       timeout: 5s
       retries: 5
 
-  jaeger:
-    image: jaegertracing/all-in-one:1.68.0
-    container_name: jaeger-container
-    environment:
-      - COLLECTOR_ZIPKIN_HOST_PORT=:9411
-      - COLLECTOR_OTLP_ENABLED=true
-    ports:
-      - "6831:6831/udp"   # принимает трейсы в формате jaeger.thrift по compact thrift protocol
-      - "6832:6832/udp"   # принимает трейсы в формате jaeger.thrift по binary thrift protocol
-      - "5778:5778"       # порт для конфигурации сэмплирования
-      - "16686:16686"     # порт веб-интерфейса
-      - "4317:4317"       # порт OTLP gRPC
-      - "4318:4318"       # порт OTLP HTTP
-      - "14250:14250"     # принимает трейсы в модели данных jaeger.proto
-      - "14268:14268"     # принимает трейсы напрямую от клиентов в формате jaeger.thrift
-      - "9411:9411"       # порт совместимости с Zipkin
-    restart: always
-
   kibana:
     image: kibana:8.16.5
     container_name: kibana-container
@@ -104,14 +86,14 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
-    ports:
-      - "${REDIS_PORT}:${REDIS_PORT}"
+    # ports:
+    #   - "${REDIS_PORT}:${REDIS_PORT}"
     restart: always
 
   auth-api:
     build:
       context: .
-      dockerfile: ./services/auth-service/src/Dockerfile
+      dockerfile: ./services/auth-service/src/Dockerfile.debug
     env_file:
       - ./.env
     cpus: "1"
@@ -133,6 +115,7 @@ services:
       start_period: 30s
     ports:
       - "8000:8000"
+      - "5678:5678"
 
   async-api:
     build:
@@ -162,7 +145,8 @@ services:
       - pg_data_volume:/var/lib/postgresql/data
       - ./backup/postgres_dump-auth/dumps:/dumps
     ports:
-      - "${POSTGRES_PORT}:${POSTGRES_PORT}"
+      - "5432:5432"
+      # - "${POSTGRES_PORT}:${POSTGRES_PORT}"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
       interval: 10s
@@ -186,18 +170,18 @@ services:
       auth-api:
         condition: service_healthy
 
-  nginx:
-    image: nginx:1.27-alpine
-    env_file: .env
-    volumes:
-      - ./infra/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./infra/nginx/configs:/etc/nginx/conf.d:ro
-    depends_on:
-      - async-api
-      - auth-api
-    ports:
-      - "${NGINX_PORT}:${NGINX_PORT}"
-    restart: always
+  # nginx:
+  #   image: nginx:1.27-alpine
+  #   env_file: .env
+  #   volumes:
+  #     - ./infra/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+  #     - ./infra/nginx/configs:/etc/nginx/conf.d:ro
+  #   depends_on:
+  #     - async-api
+  #     - auth-api
+  #   ports:
+  #     - "${NGINX_PORT}:${NGINX_PORT}"
+  #   restart: always
 
 volumes:
   redis_data:
