--- a/services/auth-service/src/Dockerfile.debug
+++ b/services/auth-service/src/Dockerfile.debug
@@ -13,20 +13,22 @@ RUN curl -sSL https://install.python-poetry.org | python3 - \
 
 ENV PATH="/root/.local/bin:${PATH}"
 
-COPY pyproject.toml poetry.lock .env ./
+COPY services/auth-service/src/pyproject.toml services/auth-service/src/poetry.lock ./
 
-# Копируем libs и собираем на месте
+# Копируем auth_utils и собираем на месте
 COPY libs/auth_utils /opt/app/libs/auth_utils
 RUN cd /opt/app/libs/auth_utils && poetry build && cd /opt/app && poetry add libs/auth_utils
 
 COPY libs/tracer_utils /opt/app/libs/tracer_utils
 RUN cd /opt/app/libs/tracer_utils && poetry build && cd /opt/app && poetry add libs/tracer_utils
 
-# RUN poetry install --only main
-RUN poetry install --with dev
+# RUN poetry install --with dev
+RUN poetry install
 
-COPY auth-service/src/ ./.
+COPY services/auth-service/src/ .
 
-RUN chmod +x entrypoint_debug.sh
+# RUN chmod +x ./scripts/entrypoint.sh
+RUN chmod +x ./scripts/entrypoint_debug.sh
 
-CMD ["./entrypoint_debug.sh"]
+# CMD ["./entrypoint_debug.sh"]
+CMD ["./scripts/entrypoint_debug.sh"]
