--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ package-mode = false
 python = ">=3.12,<4.0"
 elasticsearch = { extras = ["async"], version = ">=8.13.2,<9.0.0" }
 backoff = "2.2.1"
+rate-limite-utils = { path = "libs/rate_limite_utils" }
 auth-utils = { path = "libs/auth_utils" }
 tracer = { path = "libs/tracer_utils" }
 
