--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Common development tools"
 requires-python = ">=3.12,<4.0"
 dynamic = ["dependencies"]
+dependencies = ["pre-commit (>=4.2.0,<5.0.0)"]
 
 [project.optional-dependencies]
 dev = [
