Добавляю admin-panel в README.md

--- a/infra/nginx/configs/site.conf
+++ b/infra/nginx/configs/site.conf
@@ -16,6 +16,9 @@ server {
         proxy_pass http://admin-panel:8000/admin/;
     }
 
+    location /about/ {
+        proxy_pass http://admin-panel:8000/about/;
+    }
 
     location /static/ {
         alias /var/www/static/;
