--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,8 +6,9 @@ repos:
       - id: end-of-file-fixer
       - id: trailing-whitespace
       - id: check-added-large-files
+        exclude: ^docs/.*$
       - id: check-json
-        exclude: ^backup/elastic_dump/dump/.*\.json$
+        exclude: ^(backup/elastic_dump/dump/.*\.json|docs/.*)$
       - id: debug-statements
 
   - repo: https://github.com/PyCQA/isort
