Настраиваю кластер clickhouse

--- a/.env.example
+++ b/.env.example
@@ -47,6 +47,9 @@ DJANGO_SECRET_KEY=3m(jzmjkpzg@ej5q2qx)%ctw+q8wv02&=7ad@xbo*vkrs2r_
 DJANGO_DEBUG=True
 AUTH_BASE_URL=http://nginx
 LOGIN_PATH=/auth/api/v1/sessions/login
+
+##CLICKHOUSE
+CLICKHOUSE_HOST=clickhouse-node1
 #------------------------------------------------------------------------------
 # ПЕРЕМЕННЫЕ ДЛЯ ТЕСТОВ
 
