--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,17 +4,6 @@ version = "0.1.0"
 description = "Common development tools"
 requires-python = ">=3.12,<4.0"
 dynamic = ["dependencies"]
-dependencies = ["pre-commit (>=4.2.0,<5.0.0)"]
-
-[project.optional-dependencies]
-dev = [
-    "pre-commit>=4.1.0,<5.0.0",
-    "isort>=6.0.0,<7.0.0",
-    "black>=25.1.0,<26.0.0",
-    "flake8>=7.1.2,<8.0.0",
-    "debugpy>=1.8.13,<2.0.0",
-    "ipython>=9.1.0,<10.0.0",
-]
 
 [tool.poetry]
 package-mode = false
@@ -23,9 +12,18 @@ package-mode = false
 python = ">=3.12,<4.0"
 elasticsearch = { extras = ["async"], version = ">=8.13.2,<9.0.0" }
 backoff = "2.2.1"
+flask = ">=3.1.1,<4.0.0"
 rate-limite-utils = { path = "libs/rate_limite_utils" }
 auth-utils = { path = "libs/auth_utils" }
 tracer = { path = "libs/tracer_utils" }
+
+[tool.poetry.group.dev.dependencies]
+pre-commit = ">=4.1.0,<5.0.0"
+isort = ">=6.0.0,<7.0.0"
+black = ">=25.1.0,<26.0.0"
+flake8 = ">=7.1.2,<8.0.0"
+debugpy = ">=1.8.13,<2.0.0"
+ipython = ">=9.1.0,<10.0.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0"]
