--- a/services/metric-service/metric-api/src/pyproject.toml
+++ b/services/metric-service/metric-api/src/pyproject.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 description = "Authentication microservice"
 requires-python = ">=3.12,<4.0"
 dependencies = [
-    "flask >=3.1.1,<4.0.0"
+    "flask >=3.1.1,<4.0.0",
+    "packaging (>=25.0,<26.0)",
 ]
 
 [tool.poetry]
