Изменяю конфигурацию clickhouse

--- a/docker-compose-metrics.yml
+++ b/docker-compose-metrics.yml
@@ -5,14 +5,16 @@ services:
     hostname: zookeeper
 
   clickhouse-node1:
-    image: clickhouse/clickhouse-server:24
+    image: clickhouse/clickhouse-server:25.5
     environment:
-      - CLICKHOUSE_DEFAULT_PASSWORD=${CLICKHOUSE_DEFAULT_PASSWORD}
-      - CLICKHOUSE_ADMIN_PASSWORD=${CLICKHOUSE_ADMIN_PASSWORD}
+      - CLK_DEFAULT_PASSWORD=${CLK_DEFAULT_PASSWORD}
+      - CLK_NODE_NAME=clickhouse-node1
+      - CLK_SHARD_NAME=1
     container_name: clickhouse-node1
     hostname: clickhouse-node1
     volumes:
-      - ./infra/clickhouse/data/node1:/etc/clickhouse-server
+      - ./infra/clickhouse/config.xml:/etc/clickhouse-server/config.d/config.xml:ro
+      - ./infra/clickhouse/users.xml:/etc/clickhouse-server/users.d/users.xml:ro
     depends_on:
       - zookeeper
     healthcheck:
@@ -22,14 +24,16 @@ services:
       retries: 10
 
   clickhouse-node2:
-    image: clickhouse/clickhouse-server:24
+    image: clickhouse/clickhouse-server:25.5
     environment:
-      - CLICKHOUSE_DEFAULT_PASSWORD=${CLICKHOUSE_DEFAULT_PASSWORD}
-      - CLICKHOUSE_ADMIN_PASSWORD=${CLICKHOUSE_ADMIN_PASSWORD}
+      - CLK_DEFAULT_PASSWORD=${CLK_DEFAULT_PASSWORD}
+      - CLK_NODE_NAME=clickhouse-node2
+      - CLK_SHARD_NAME=1
     container_name: clickhouse-node2
     hostname: clickhouse-node2
     volumes:
-      - ./infra/clickhouse/data/node2:/etc/clickhouse-server
+      - ./infra/clickhouse/config.xml:/etc/clickhouse-server/config.d/config.xml:ro
+      - ./infra/clickhouse/users.xml:/etc/clickhouse-server/users.d/users.xml:ro
     depends_on:
       - zookeeper
     healthcheck:
@@ -39,14 +43,16 @@ services:
       retries: 10
 
   clickhouse-node3:
-    image: clickhouse/clickhouse-server:24
+    image: clickhouse/clickhouse-server:25.5
     environment:
-      - CLICKHOUSE_DEFAULT_PASSWORD=${CLICKHOUSE_DEFAULT_PASSWORD}
-      - CLICKHOUSE_ADMIN_PASSWORD=${CLICKHOUSE_ADMIN_PASSWORD}
+      - CLK_DEFAULT_PASSWORD=${CLK_DEFAULT_PASSWORD}
+      - CLK_NODE_NAME=clickhouse-node3
+      - CLK_SHARD_NAME=2
     container_name: clickhouse-node3
     hostname: clickhouse-node3
     volumes:
-      - ./infra/clickhouse/data/node3:/etc/clickhouse-server
+      - ./infra/clickhouse/config.xml:/etc/clickhouse-server/config.d/config.xml:ro
+      - ./infra/clickhouse/users.xml:/etc/clickhouse-server/users.xml
     depends_on:
       - zookeeper
     healthcheck:
@@ -56,14 +62,16 @@ services:
       retries: 10
 
   clickhouse-node4:
-    image: clickhouse/clickhouse-server:24
+    image: clickhouse/clickhouse-server:25.5
     environment:
-      - CLICKHOUSE_DEFAULT_PASSWORD=${CLICKHOUSE_DEFAULT_PASSWORD}
-      - CLICKHOUSE_ADMIN_PASSWORD=${CLICKHOUSE_ADMIN_PASSWORD}
+      - CLK_DEFAULT_PASSWORD=${CLK_DEFAULT_PASSWORD}
+      - CLK_NODE_NAME=clickhouse-node4
+      - CLK_SHARD_NAME=2
     container_name: clickhouse-node4
     hostname: clickhouse-node4
     volumes:
-      - ./infra/clickhouse/data/node4:/etc/clickhouse-server
+      - ./infra/clickhouse/config.xml:/etc/clickhouse-server/config.d/config.xml:ro
+      - ./infra/clickhouse/users.xml:/etc/clickhouse-server/users.d/users.xml:ro
     depends_on:
       - zookeeper
     healthcheck:
@@ -76,8 +84,9 @@ services:
     build:
       context: .
       dockerfile: ./backup/clickhouse_init_struct/Dockerfile
-    env_file:
-      - ./.env
+    environment:
+      - CLK_HOST=${CLK_HOST}
+      - CLK_DEFAULT_PASSWORD=${CLK_DEFAULT_PASSWORD}
     depends_on:
       clickhouse-node1:
         condition: service_healthy
