--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ flask = ">=3.1.1,<4.0.0"
 rate-limite-utils = { path = "libs/rate_limite_utils" }
 auth-utils = { path = "libs/auth_utils" }
 tracer = { path = "libs/tracer_utils" }
+apiflask = "^2.4.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = ">=4.1.0,<5.0.0"
