Первая рабочая версия по отправке событий в Kafka

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,6 +30,7 @@ repos:
                 \.venv/.*|
                 build/.*|
                 dist/.*|
+                docs/.*|
                 migrations/.*|
                 migration/.*
             )$
@@ -50,6 +51,7 @@ repos:
                 \.venv/.*|
                 build/.*|
                 dist/.*|
+                docs/.*|
                 .*/migrations/.*|
                 .*/migration/.*|
                 services/auth-service/src/migration/.*|
