--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ rate-limite-utils = { path = "libs/rate_limite_utils" }
 auth-utils = { path = "libs/auth_utils" }
 tracer = { path = "libs/tracer_utils" }
 apiflask = "^2.4.0"
+kafka-python = "^2.2.10"
+pyjwt = ">=2.9.0,<2.10.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = ">=4.1.0,<5.0.0"
