--- a/services/metric-service/metric-api/src/pyproject.toml
+++ b/services/metric-service/metric-api/src/pyproject.toml
@@ -10,6 +10,11 @@ dependencies = [
     "backoff (>=2.2.1,<3.0.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
     "pydantic (>=2.11.5,<3.0.0)",
+    "gevent (>=25.5.1,<26.0.0)",
+    "pydantic-settings (>=2.9.1,<3.0.0)",
+    "gunicorn (>=23.0.0,<24.0.0)",
+    "uvicorn (>=0.34.3,<0.35.0)",
+    "apiflask (>=2.4.0,<3.0.0)",
 ]
 
 [tool.poetry]
