--- a/.env.example
+++ b/.env.example
@@ -49,9 +49,9 @@ AUTH_BASE_URL=http://nginx
 LOGIN_PATH=/auth/api/v1/sessions/login
 
 ##CLICKHOUSE
-
 CLK_HOST=clickhouse-node1
 CLK_DEFAULT_PASSWORD=1234
+CLK_USER=default
 
 #KAFKA
 ##TOPICS
