--- a/infra/kafka/docker-compose.kafka.yaml
+++ b/infra/kafka/docker-compose.kafka.yaml
@@ -88,11 +88,11 @@ services:
     command: >
       bash -c "
         until /opt/bitnami/kafka/bin/kafka-topics.sh --bootstrap-server kafka-0:9092 --list; do sleep 5; done &&
-        /opt/bitnami/kafka/bin/kafka-topics.sh --create --bootstrap-server kafka-0:9092 --topic $$LIKE_TOPIC --partitions 3 --replication-factor 2 --config delete.retention.ms=3600000 &&
-        /opt/bitnami/kafka/bin/kafka-topics.sh --create --bootstrap-server kafka-0:9092 --topic $$COMMENT_TOPIC --partitions 3 --replication-factor 2 --config delete.retention.ms=3600000 &&
-        /opt/bitnami/kafka/bin/kafka-topics.sh --create --bootstrap-server kafka-0:9092 --topic $$WATCH_PROGRESS_TOPIC --partitions 3 --replication-factor 2 --config delete.retention.ms=3600000 &&
-        /opt/bitnami/kafka/bin/kafka-topics.sh --create --bootstrap-server kafka-0:9092 --topic $$WATCH_LIST_TOPIC --partitions 3 --replication-factor 2 --config delete.retention.ms=3600000 &&
-        /opt/bitnami/kafka/bin/kafka-topics.sh --create --bootstrap-server kafka-0:9092 --topic $$OTHER_TOPIC --partitions 3 --replication-factor 2 --config delete.retention.ms=3600000
+        /opt/bitnami/kafka/bin/kafka-topics.sh --create --bootstrap-server kafka-0:9092 --topic $$KAFKA_LIKE_TOPIC --partitions 3 --replication-factor 2 --config delete.retention.ms=3600000 &&
+        /opt/bitnami/kafka/bin/kafka-topics.sh --create --bootstrap-server kafka-0:9092 --topic $$KAFKA_COMMENT_TOPIC --partitions 3 --replication-factor 2 --config delete.retention.ms=3600000 &&
+        /opt/bitnami/kafka/bin/kafka-topics.sh --create --bootstrap-server kafka-0:9092 --topic $$KAFKA_WATCH_PROGRESS_TOPIC --partitions 3 --replication-factor 2 --config delete.retention.ms=3600000 &&
+        /opt/bitnami/kafka/bin/kafka-topics.sh --create --bootstrap-server kafka-0:9092 --topic $$KAFKA_WATCH_LIST_TOPIC --partitions 3 --replication-factor 2 --config delete.retention.ms=3600000 &&
+        /opt/bitnami/kafka/bin/kafka-topics.sh --create --bootstrap-server kafka-0:9092 --topic $$KAFKA_OTHER_TOPIC --partitions 3 --replication-factor 2 --config delete.retention.ms=3600000
       "
 
 
