--- a/.env.example
+++ b/.env.example
@@ -50,14 +50,28 @@ LOGIN_PATH=/auth/api/v1/sessions/login
 
 ##CLICKHOUSE
 CLICKHOUSE_HOST=clickhouse-node1
+CLICKHOUSE_DEFAULT_PASSWORD=123
+CLICKHOUSE_ADMIN_PASSWORD=123
 
 #KAFKA
+##HOSTS
+KAFKA_HOST1=kafka-0
+# KAFKA_HOST1=localhost
+KAFKA_PORT1=9092
+KAFKA_HOST2=kafka-1
+# KAFKA_HOST2=localhost
+KAFKA_PORT2=9092
+KAFKA_HOST3=kafka-2
+# KAFKA_HOST3=localhost
+KAFKA_PORT3=9092
+
+
 ##TOPICS
-LIKE_TOPIC=user_metric_like_event
-COMMENT_TOPIC=user_metric_comment_event
-WATCH_PROGRESS_TOPIC=user_metric_watch_progress_event
-WATCH_LIST_TOPIC=user_metric_add_to_watch_list_event
-OTHER_TOPIC=user_metric_other_event
+KAFKA_LIKE_TOPIC=user_metric_like_event
+KAFKA_COMMENT_TOPIC=user_metric_comment_event
+KAFKA_WATCH_PROGRESS_TOPIC=user_metric_watch_progress_event
+KAFKA_WATCH_LIST_TOPIC=user_metric_add_to_watch_list_event
+KAFKA_OTHER_TOPIC=user_metric_other_event
 #------------------------------------------------------------------------------
 # ПЕРЕМЕННЫЕ ДЛЯ ТЕСТОВ
 
