--- a/infra/nginx/configs/site.conf
+++ b/infra/nginx/configs/site.conf
@@ -16,6 +16,10 @@ server {
         proxy_pass http://admin-panel:8000/admin/;
     }
 
+    location /metrics/ {
+        proxy_pass http://metric-api:8000/metrics/;
+    }
+
     location /about/ {
         proxy_pass http://admin-panel:8000/about/;
     }
