--- a/services/metric-service/metric-api/src/pyproject.toml
+++ b/services/metric-service/metric-api/src/pyproject.toml
@@ -13,8 +13,8 @@ dependencies = [
     "gevent (>=25.5.1,<26.0.0)",
     "pydantic-settings (>=2.9.1,<3.0.0)",
     "gunicorn (>=23.0.0,<24.0.0)",
-    "uvicorn (>=0.34.3,<0.35.0)",
     "apiflask (>=2.4.0,<3.0.0)",
+    "flask-limiter (>=3.12,<4.0)",
 ]
 
 [tool.poetry]
