Исправляю инфру docker

--- a/backup/clickhouse_init_struct/Dockerfile
+++ b/backup/clickhouse_init_struct/Dockerfile
@@ -4,6 +4,6 @@ RUN apt-get update && apt-get install -y clickhouse-client && rm -rf /var/lib/ap
 
 RUN pip install clickhouse-driver dotenv
 
-COPY backup/clickhouse_init_struct/init_struct.py ./
+COPY ./init_struct.py ./
 
 CMD [ "python", "init_struct.py" ]
