--- a/services/metric-service/docker-compose.metric-services.yml
+++ b/services/metric-service/docker-compose.metric-services.yml
@@ -18,3 +18,16 @@ services:
       timeout: 5s
       retries: 5
     restart: always
+
+  etl:
+    build:
+      context: .
+      dockerfile: ./etl/Dockerfile
+    env_file:
+      - ../../.env
+    depends_on:
+      init_clickhouse:
+        condition: service_completed_successfully
+      kafka-init:
+        condition: service_completed_successfully
+    restart: always
