--- a/infra/clickhouse/docker-compose.clickhouse.yml
+++ b/infra/clickhouse/docker-compose.clickhouse.yml
@@ -7,14 +7,14 @@ services:
   clickhouse-node1:
     image: clickhouse/clickhouse-server:25.5
     environment:
-      # - CLK_DEFAULT_PASSWORD=${CLK_DEFAULT_PASSWORD}
+      - CLK_PASSWORD=${CLICKHOUSE_PASSWORD}
       - CLK_NODE_NAME=clickhouse-node1
       - CLK_SHARD_NAME=1
     container_name: clickhouse-node1
     hostname: clickhouse-node1
     volumes:
       - ./config.xml:/etc/clickhouse-server/config.d/config.xml:ro
-      # - ./users.xml:/etc/clickhouse-server/users.d/users.xml:ro
+      - ./users.xml:/etc/clickhouse-server/users.d/users.xml:ro
       - clickhouse_data_node_1:/var/lib/clickhouse
     depends_on:
       - zookeeper
@@ -29,14 +29,14 @@ services:
   clickhouse-node2:
     image: clickhouse/clickhouse-server:25.5
     environment:
-      # - CLK_DEFAULT_PASSWORD=${CLK_DEFAULT_PASSWORD}
+      - CLK_PASSWORD=${CLICKHOUSE_PASSWORD}
       - CLK_NODE_NAME=clickhouse-node2
       - CLK_SHARD_NAME=1
     container_name: clickhouse-node2
     hostname: clickhouse-node2
     volumes:
       - ./config.xml:/etc/clickhouse-server/config.d/config.xml:ro
-      # - ./users.xml:/etc/clickhouse-server/users.d/users.xml:ro
+      - ./users.xml:/etc/clickhouse-server/users.d/users.xml:ro
       - clickhouse_data_node_2:/var/lib/clickhouse
     depends_on:
       - zookeeper
@@ -49,14 +49,14 @@ services:
   clickhouse-node3:
     image: clickhouse/clickhouse-server:25.5
     environment:
-      # - CLK_DEFAULT_PASSWORD=${CLK_DEFAULT_PASSWORD}
+      - CLK_PASSWORD=${CLICKHOUSE_PASSWORD}
       - CLK_NODE_NAME=clickhouse-node3
       - CLK_SHARD_NAME=2
     container_name: clickhouse-node3
     hostname: clickhouse-node3
     volumes:
       - ./config.xml:/etc/clickhouse-server/config.d/config.xml:ro
-      # - ./users.xml:/etc/clickhouse-server/users.d/users.xml:ro
+      - ./users.xml:/etc/clickhouse-server/users.d/users.xml:ro
       - clickhouse_data_node_3:/var/lib/clickhouse
     depends_on:
       - zookeeper
@@ -69,14 +69,14 @@ services:
   clickhouse-node4:
     image: clickhouse/clickhouse-server:25.5
     environment:
-      # - CLK_DEFAULT_PASSWORD=${CLK_DEFAULT_PASSWORD}
+      - CLK_PASSWORD=${CLICKHOUSE_PASSWORD}
       - CLK_NODE_NAME=clickhouse-node4
       - CLK_SHARD_NAME=2
     container_name: clickhouse-node4
     hostname: clickhouse-node4
     volumes:
       - ./config.xml:/etc/clickhouse-server/config.d/config.xml:ro
-      # - ./users.xml:/etc/clickhouse-server/users.d/users.xml:ro
+      - ./users.xml:/etc/clickhouse-server/users.d/users.xml:ro
       - clickhouse_data_node_4:/var/lib/clickhouse
     depends_on:
       - zookeeper
@@ -91,9 +91,9 @@ services:
       context: ../../backup/clickhouse_init_struct
       dockerfile: Dockerfile
     environment:
-      - CLK_HOST=${CLK_HOST}
-      - CLK_DEFAULT_PASSWORD=${CLK_DEFAULT_PASSWORD}
-      - CLK_USER=${CLK_USER}
+      - CLICKHOUSE_HOST=${CLICKHOUSE_HOST}
+      - CLICKHOUSE_PASSWORD=${CLICKHOUSE_PASSWORD}
+      - CLICKHOUSE_USER=${CLICKHOUSE_USER}
     depends_on:
       clickhouse-node1:
         condition: service_healthy
