--- a/services/metric-service/tests/functional/pyproject.toml
+++ b/services/metric-service/tests/functional/pyproject.toml
@@ -14,7 +14,14 @@ dependencies = [
     "requests (==2.32.3)"
 ]
 
+[tool.poetry]
+package-mode = false
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
+addopts = "--asyncio-mode=auto -W ignore::DeprecationWarning"
