Реализую тесты для сервиса метрики

--- a/.env.example
+++ b/.env.example
@@ -75,6 +75,13 @@ KAFKA_OTHER_TOPIC=user_metric_other_event
 #------------------------------------------------------------------------------
 # ПЕРЕМЕННЫЕ ДЛЯ ТЕСТОВ
 
+TEST_CLICKHOUSE__HOST=clickhouse-node1
+TEST_CLICKHOUSE__PASSWORD=1234
+TEST_CLICKHOUSE__USER=default
+
+TEST_METRICSAPI__HOST=metric-api
+TEST_METRICSAPI__PORT=8000
+
 # REDIS (RedisConf)
 TEST_REDIS__HOST=redis-container
 # TEST_REDIS__HOST=localhost
