--- a/services/metric-service/tests/functional/pyproject.toml
+++ b/services/metric-service/tests/functional/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "pydantic-settings (==2.9.1)",
     "python-dotenv (==1.1.0)",
     "clickhouse-driver (==0.2.9)",
-    "requests (==2.32.3)"
+    "requests (==2.32.3)",
+    "faker (>=37.3.0,<38.0.0)"
 ]
 
 [tool.poetry]
