--- a/.env.example
+++ b/.env.example
@@ -72,6 +72,12 @@ KAFKA_COMMENT_TOPIC=user_metric_comment_event
 KAFKA_WATCH_PROGRESS_TOPIC=user_metric_watch_progress_event
 KAFKA_WATCH_LIST_TOPIC=user_metric_add_to_watch_list_event
 KAFKA_OTHER_TOPIC=user_metric_other_event
+
+#MONGODB
+MONGODB_NAME=kinoservice
+MONGODB_LIKE_COLL=likeCollection
+MONGODB_BOOKMARK_COLL=bookmarkCollection
+MONGODB_REVIEWS_COLL=reviewsCollection
 #------------------------------------------------------------------------------
 # ПЕРЕМЕННЫЕ ДЛЯ ТЕСТОВ
 
