--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ apiflask = "^2.4.0"
 kafka-python = "^2.2.10"
 pyjwt = ">=2.9.0,<2.10.0"
 flask-limiter = "^3.12"
+wemake-python-styleguide = "^1.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = ">=4.1.0,<5.0.0"
