--- a/services/auth-service/src/Dockerfile
+++ b/services/auth-service/src/Dockerfile
@@ -1,4 +1,5 @@
-FROM python:3.12-slim
+ARG PYTHON_VERSION=3.12
+FROM python:${PYTHON_VERSION}-slim
 
 RUN apt-get update && apt-get install -y curl build-essential netcat-openbsd \
     gcc \
