Создаю структуру content-actions

--- a/infra/nginx/configs/site.conf
+++ b/infra/nginx/configs/site.conf
@@ -20,6 +20,10 @@ server {
         proxy_pass http://metric-api:8000/metrics/;
     }
 
+    location /content-actions/ {
+        proxy_pass http://content-actions-api:8000/content-actions/;
+    }
+
     location /about/ {
         proxy_pass http://admin-panel:8000/about/;
     }
