--- a/services/content-actions-service/src/Dockerfile
+++ b/services/content-actions-service/src/Dockerfile
@@ -13,21 +13,21 @@ RUN curl -sSL https://install.python-poetry.org | python3 - \
 
 ENV PATH="/root/.local/bin:${PATH}"
 
-COPY services/content-actions-service/src/pyproject.toml services/content-actions-service/src/poetry.lock ./
+COPY src/pyproject.toml src/poetry.lock ./
 
 # Копируем libs и собираем на месте
-COPY libs/auth_utils /opt/app/libs/auth_utils
-RUN cd /opt/app/libs/auth_utils && poetry build && cd /opt/app && poetry add libs/auth_utils
+# COPY ../../libs/auth_utils /opt/app/libs/auth_utils
+# RUN cd /opt/app/libs/auth_utils && poetry build && cd /opt/app && poetry add libs/auth_utils
 
-COPY libs/tracer_utils /opt/app/libs/tracer_utils
-RUN cd /opt/app/libs/tracer_utils && poetry build && cd /opt/app && poetry add libs/tracer_utils
+# COPY ../../libs/tracer_utils /opt/app/libs/tracer_utils
+# RUN cd /opt/app/libs/tracer_utils && poetry build && cd /opt/app && poetry add libs/tracer_utils
 
-COPY libs/rate_limite_utils /opt/app/libs/rate_limite_utils
-RUN cd /opt/app/libs/rate_limite_utils && poetry build && cd /opt/app && poetry add libs/rate_limite_utils
+# COPY ../../libs/rate_limite_utils /opt/app/libs/rate_limite_utils
+# RUN cd /opt/app/libs/rate_limite_utils && poetry build && cd /opt/app && poetry add libs/rate_limite_utils
 
 RUN poetry install --only main
 
-COPY services/content-actions-service/src/ .
+COPY src/ .
 
 RUN chmod +x ./scripts/entrypoint.sh
 
