Вношу изменения после ревью.

--- a/infra/nginx/configs/site.conf
+++ b/infra/nginx/configs/site.conf
@@ -21,7 +21,7 @@ server {
     }
 
     location /content-actions/ {
-        proxy_pass http://content-actions-api:8000/content-actions/;
+        proxy_pass http://content-actions-api:8000/content-api/;
     }
 
     location /about/ {
