Меняю путь в site.conf

--- a/infra/nginx/configs/site.conf
+++ b/infra/nginx/configs/site.conf
@@ -20,7 +20,7 @@ server {
         proxy_pass http://metric-api:8000/metrics/;
     }
 
-    location /content-actions/ {
+    location /content-api/ {
         proxy_pass http://content-actions-api:8000/content-api/;
     }
 
